--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <header>
-  <div class="title">Carte</div>
+  <div class="title">
+    <img class="headerImage" src="assets/logo.png" alt="" />
+    Tracking devices
+  </div>
 </header>
 <main>
   <div class="left-bar">
@@ -91,3 +94,12 @@
   <a class="close" (click)="closePopup()" id="popup-close">×</a>
   <div class="content" id="popup-content"></div>
 </div>
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
