--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,12 +3,30 @@
   flex-direction: column;
   height: 100vh;
 }
+.headerImage {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
 header {
   background-color: var(--header-color);
   padding: 2em;
 }
 header .title {
   font-size: 28px;
+  color: #efefef;
+}
+header {
+  background-color: #282a2d;
+}
+header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: drop-shadow(0 0 5px 2px #282a2d);
 }
 main {
   display: flex;
@@ -36,7 +54,6 @@ footer {
   border: 1px solid #cccccc;
   bottom: 12px;
   left: -50px;
-  min-width: 200px;
   font-size: 12px;
 }
 
