--- a/src/app/general-settings/general-settings.component.scss
+++ b/src/app/general-settings/general-settings.component.scss
@@ -11,9 +11,9 @@
 }
 
 .mat-input-element:disabled {
-  color: inherit; /* Maintain the original text color */
-  background-color: transparent; /* Maintain the original background color */
-  border: none; /* Remove the border */
-  box-shadow: none; /* Remove the box shadow */
-  cursor: text; /* Maintain the text cursor */
+  color: inherit !important;
+  background-color: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+  cursor: text !important;
 }
