--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,40 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+:root {
+  --primary-color: #408c9c;
+  --secondary-color: #bcda6c;
+  --third-color: #89c2b8;
+  --fourth-color: #d5ebad;
+  --fifth-color: #445c74;
+}
+
+.updateData {
+  background-color: var(--primary-color);
+}
+.updateData1 {
+  background-color: var(--third-color);
+}
+
+.insertData {
+  background-color: var(--secondary-color);
+}
+
+.updateDataOutline {
+  color: var(--primary-color);
+  background-color: transparent;
+  border: 1px solid var(--primary-color);
+  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.updateDataOutline:hover {
+  color: #fff;
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
