add background button

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,10 @@ body {
   background-color: var(--third-color);
 }
 
+.updateData2 {
+  background-color: var(--fourth-color);
+}
+
 .insertData {
   background-color: var(--secondary-color);
 }
