--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -72,4 +72,13 @@ footer {
   position: fixed;
   right: 5px;
   z-index: 999;
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.map-control-img {
+  width: 35px;
+  height: 35px;
 }
