change serverAddress to phoneNumber

--- a/src/app/modals/edit-device/edit-device.component.html
+++ b/src/app/modals/edit-device/edit-device.component.html
@@ -17,11 +17,11 @@
 
       <div class="col-lg-4">
         <mat-form-field>
-          <mat-label>Adresse du serveur</mat-label>
+          <mat-label>Numéro téléphone du dispositif</mat-label>
           <input
             pattern="^(034|032|033|038)\d{7}$"
             matInput
-            formControlName="serverAddress"
+            formControlName="deviceNumber"
             placeholder="Enter Adresse serveur"
           />
         </mat-form-field>
