--- a/src/app/general-settings/general-settings.component.html
+++ b/src/app/general-settings/general-settings.component.html
@@ -29,84 +29,8 @@
     </mat-menu>
   </div>
 </header>
+
 <br />
-<div class="container">
-  <h1>Paramètres générales</h1>
-  <br />
-  <mat-card class="custom-card">
-    <mat-card-header>
-      <mat-card-title class="card-header">
-        Matériels à afficher
-        <hr />
-      </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form
-        class="example-form"
-        [formGroup]="formGroup"
-        (ngSubmit)="alertFormValues(formGroup)"
-        ngNativeValidate
-      >
-        <div class="row">
-          <div class="col-lg-4">
-            <mat-slide-toggle color="primary" formControlName="online">
-              En ligne
-            </mat-slide-toggle>
-          </div>
-          <div class="col-lg-4">
-            <mat-slide-toggle color="primary" formControlName="offline">
-              Hors ligne
-            </mat-slide-toggle>
-          </div>
-          <div class="col-lg-4">
-            <mat-slide-toggle color="primary" formControlName="maintenance">
-              En maintenance
-            </mat-slide-toggle>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <p>Date</p>
-          </div>
-          <mat-form-field class="col-lg-6">
-            <mat-label>Debut</mat-label>
-            <input
-              matInput
-              [matDatepicker]="dateDebut"
-              formControlName="dateDebut"
-            />
-            <mat-hint>DD-MM-YYYY</mat-hint>
-            <mat-datepicker-toggle
-              matIconSuffix
-              [for]="dateDebut"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #dateDebut></mat-datepicker>
-          </mat-form-field>
-          <mat-form-field class="col-lg-6">
-            <mat-label>Fin</mat-label>
-            <input matInput [matDatepicker]="dp" formControlName="dateFin" />
-            <mat-hint>DD-MM-YYYY</mat-hint>
-            <mat-datepicker-toggle
-              matIconSuffix
-              [for]="dp"
-            ></mat-datepicker-toggle>
-            <mat-datepicker #dp></mat-datepicker>
-          </mat-form-field>
-          <div class="row">
-            <div class="col-lg-12">
-              <mat-error *ngIf="formGroup.invalid"> Invalid date </mat-error>
-            </div>
-          </div>
-        </div>
-        <br /><br />
-        <button [disabled]="formGroup.invalid" mat-raised-button type="submit">
-          Enregistrer
-        </button>
-      </form>
-    </mat-card-content>
-  </mat-card>
-</div>
-<br /><br />
 <div class="container">
   <h2>Matériels</h2>
   <br />
@@ -195,7 +119,11 @@
             >
               <mat-icon>description</mat-icon>
             </button>
-            <button matTooltip="Check status" class="btn updateData2">
+            <button
+              (click)="checkStatus(element.id)"
+              matTooltip="Check status"
+              class="btn updateData2"
+            >
               <mat-icon>dialpad</mat-icon>
             </button>
             <button matTooltip="Supprimer" class="btn btn-danger">
@@ -234,7 +162,7 @@
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #menu="matMenu" yPosition="below" xPosition="before">
-  <button mat-menu-item>
+  <button (click)="chekStatusMultiple()" mat-menu-item>
     <mat-icon>dialpad</mat-icon>
     <span>Check status</span>
   </button>
