--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,10 @@ body {
   background-color: var(--fourth-color);
 }
 
+.updateData3 {
+  background-color: var(--fifth-color);
+}
+
 .insertData {
   background-color: var(--secondary-color);
 }
