--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,7 +5,9 @@
     <button class="btn btn-outline btn-header" (click)="initialData()">
       ACCUEIL
     </button>
-    <button (click)="reInitMap()">Reinit Map</button>
+    <button class="btn btn-outline btn-header" (click)="reInitMap()">
+      <mat-icon>refresh</mat-icon>
+    </button>
     <button
       class="btn btn-outline btn-header params"
       mat-button
