--- a/src/app/device-history/device-history.component.html
+++ b/src/app/device-history/device-history.component.html
@@ -1,152 +1,204 @@
-<header>
-  <div class="title">
-    <img class="headerImage" src="assets/logo.png" alt="" />
-    Tracking devices
-    <button
-      class="btn btn-outline btn-header"
-      [routerLink]="['/']"
-      mat-menu-item
-    >
-      ACCUEIL
-    </button>
-    <button
-      class="btn btn-outline btn-header params"
-      mat-button
-      [matMenuTriggerFor]="belowMenu"
-    >
-      Manorintsoa
-      <mat-icon>keyboard_arrow_down</mat-icon>
-    </button>
-    <mat-menu #belowMenu="matMenu" yPosition="below">
-      <button
-        [routerLink]="['/parametres']"
-        routerLinkActive="router-link-active"
-        mat-menu-item
-      >
-        Parametres
+<div class="background-container">
+  <header>
+    <div class="title">
+      <img class="headerImage" src="assets/logo.png" alt="" />
+      Tracking devices
+
+      <button class="btn btn-outline btn-header" (click)="redirectMap()">
+        ACCUEIL
       </button>
-      <button mat-menu-item>Deconnexion</button>
-    </mat-menu>
+      <button
+        class="btn btn-outline btn-header params"
+        mat-button
+        [matMenuTriggerFor]="belowMenu"
+      >
+        Manorintsoa
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </button>
+      <mat-menu #belowMenu="matMenu" yPosition="below">
+        <button
+          [routerLink]="['/parametres']"
+          routerLinkActive="router-link-active"
+          mat-menu-item
+        >
+          Parametres
+        </button>
+        <button mat-menu-item>Deconnexion</button>
+      </mat-menu>
+    </div>
+  </header>
+
+  <div class="container">
+    <br /><br />
+    <h2>
+      <span class="titleItem"> Historique {{ filterType }} </span>
+    </h2>
+    <br />
+    <br />
+    <mat-form-field subscriptSizing="dynamic">
+      <mat-label>Filter</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        placeholder="Ex. Mia"
+        #input
+      />
+    </mat-form-field>
+
+    <div *ngIf="filterType === 'alerte'">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8 demo-table"
+        matSort
+      >
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef class="header">Nom</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.name }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="seuil">
+          <th mat-header-cell *matHeaderCellDef class="header">Seuil</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.seuil }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef class="header">Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.date | date : "dd/MM/yyyy HH:mm" }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="deviceNumber">
+          <th mat-header-cell *matHeaderCellDef class="header">Coordonnées</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.deviceNumber }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="limiteHG">
+          <th mat-header-cell *matHeaderCellDef class="header">
+            Limites Coordonnées Nord Ouest
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <span [innerHTML]="element.limiteHG | formatCoordinates"></span>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="limiteBD">
+          <th mat-header-cell *matHeaderCellDef class="header">
+            Limites Coordonnées Sud Est
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <span [innerHTML]="element.limiteBD | formatCoordinates"></span>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="blinkLimites">
+          <th mat-header-cell *matHeaderCellDef class="header">
+            Alerte Limite
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <span [innerHTML]="element.blinkLimites"></span>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="blinkSeuil">
+          <th mat-header-cell *matHeaderCellDef class="header">Alerte Seuil</th>
+          <td mat-cell *matCellDef="let element">
+            <span [innerHTML]="element.blinkSeuil"></span>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="blinkCredit">
+          <th mat-header-cell *matHeaderCellDef class="header">
+            Alerte crédit
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <span [innerHTML]="element.blinkSeuil"></span>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
+
+    <div *ngIf="filterType !== 'alerte'">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8 demo-table"
+        matSort
+      >
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef class="header">Nom</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.name }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="seuil">
+          <th mat-header-cell *matHeaderCellDef class="header">Seuil</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.seuil }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef class="header">Status</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.status }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="deviceNumber">
+          <th mat-header-cell *matHeaderCellDef class="header">Coordonnées</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.deviceNumber }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef class="header">Date</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.date | date : "dd/MM/yyyy HH:mm" }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="icon">
+          <th mat-header-cell *matHeaderCellDef class="header">Icon</th>
+          <td mat-cell *matCellDef="let element">
+            <input
+              class="image-form"
+              type="image"
+              [src]="'http://localhost:3000/images/' + element.icon"
+              alt=""
+            />
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsTwo"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsTwo"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">
+            Pas de données pour "{{ input.value }}"
+          </td>
+        </tr>
+      </table>
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 25, 100]"
+        aria-label="Select page of users"
+      ></mat-paginator>
+    </div>
   </div>
-</header>
-
-<div class="container">
-  <h2>Historique</h2>
-  <br />
-
-  <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. Mia"
-      #input
-    />
-  </mat-form-field>
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    class="mat-elevation-z8 demo-table"
-  >
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef class="header">Nom</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('name', element.changes) }"
-      >
-        {{ element.name }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="seuil">
-      <th mat-header-cell *matHeaderCellDef class="header">Seuil</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('seuil', element.changes) }"
-      >
-        {{ element.seuil }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef class="header">Status</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('status', element.changes) }"
-      >
-        {{ element.status }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef class="header">Date</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.date | date : "dd/MM/yyyy HH:mm" }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="deviceNumber">
-      <th mat-header-cell *matHeaderCellDef class="header">Coordonnées</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('deviceNumber', element.changes) }"
-      >
-        {{ element.deviceNumber }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="icon">
-      <th mat-header-cell *matHeaderCellDef class="header">Icon</th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('icon', element.changes) }"
-      >
-        <input
-          class="image-form"
-          type="image"
-          [src]="'http://localhost:3000/images/' + element.icon"
-          alt=""
-        />
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="limiteHG">
-      <th mat-header-cell *matHeaderCellDef class="header">
-        Limites Coordonnées Nord Ouest
-      </th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('limiteHG', element.changes) }"
-      >
-        <span [innerHTML]="element.limiteHG | formatCoordinates"></span>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="limiteBD">
-      <th mat-header-cell *matHeaderCellDef class="header">
-        Limites Coordonnées Sud Est
-      </th>
-      <td
-        mat-cell
-        *matCellDef="let element"
-        [ngClass]="{ edited: updatedColumn('limiteBD', element.changes) }"
-      >
-        <span [innerHTML]="element.limiteBD | formatCoordinates"></span>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">
-        Pas de données pour "{{ input.value }}"
-      </td>
-    </tr>
-  </table>
 </div>
